--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,72 @@
     --paragraph-font: 'Oswald', sans-serif;
 }
 
+header {
+    background-color:#8DA7BE;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.card-img {
+    width: 100%;
+    border: 10px solid #554640;;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+} 
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    margin: 200px 0;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+    margin: 200px 0;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+    margin: 200px 0;
+}
+
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+    height: 725px;
+    background-color: #E1CA96 ;
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+}
+
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -32,20 +98,12 @@ main section {
     text-align: center;
 }
 
-#background {
-    height: 725px;
-}
-
 body {
     background-color: #554640;
     margin: 0;
     padding: 0;
     font-family: var(--heading-font);
     font-size: 22px;
-}
-
-header {
-    background-color:#8DA7BE;
 }
 
 nav a:hover {
@@ -84,22 +142,23 @@ nav a:hover {
     background-color: #554640 ;
 }
 
-#background {
-    background-color: #E1CA96 ;
-}
-
 .msg {
     background-color: #197DC2;
     padding: 35px;
     line-height: 1.5em;
+    box-shadow: 5px 5px 10px #554640;
+    grid-column: 6/10;
+    grid-row: 6/7;
 }
 
 footer {
     color: #8DA7BE;
     background-color: #554640;
     padding: 25px 50px;
-    padding-top: 15px;
-    margin-top: 200px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .social img {
@@ -142,6 +201,24 @@ h4 {
     width: 100%;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 .logo {
     width: 80px;
     padding-top: 10px;
@@ -167,14 +244,44 @@ h2 {
     margin: 0;
 }
 
-.rivers-card {
-    margin: 200px 0;
-}
-
-.camping-card {
-    margin: 200px 0;
-}
-
-.rapids-card {
-    margin: 200px 0;
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
