--- a/ethanhodges/styles/style.css
+++ b/ethanhodges/styles/style.css
@@ -6,9 +6,11 @@
 }
 
 .logo {
-  display: flex;
-  justify-content: center;
-  width: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 5px;
+  width: 250px;
 }
 
 .ref-img {
@@ -21,16 +23,75 @@
     align-self: center;
 }
 
-  nav {
-    display: flex;
-    justify-content: space-around;
-    justify-self: center;
-    align-self: left;
-    
+#content {
+  max-width: 1600px;
+  padding: 15px 30px;
 }
 
-  header {
+header {
     background-color:#c2c1a5;
     display: grid;
     grid-template-columns: 150px auto;
 }
+
+nav {
+  display: flex;
+  justify-content: space-around;
+}
+
+p {
+  font-family: var(--heading-font);
+  font-size: 18px;
+}
+
+#home_main {
+  padding-top: 5px;
+  display :grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(10, [col] 1fr);
+  grid-template-rows: repeat(2, [row] auto);
+}
+
+#section_1 {
+  grid-column: 1/6;
+  grid-row: 1/2;
+  color: #f5f9e9;
+  background-color: #515751;
+}
+
+#home_img_2 {
+  width: 100%;
+  height: auto;
+  grid-column: 6/10;
+  grid-row: 1/2;
+}
+
+#home_img_1 {
+  width: 100%;
+  grid-column: 2/5;
+  grid-row: 2/3;
+}
+
+#home_p_2 {
+  grid-column: 5/11;
+  grid-row: 2/3;
+  color: #f5f9e9;
+  background-color: #515751;
+}
+
+#home_title {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer {
+  color: #596869;
+  background-color: #c2c1a5;
+  padding: 25px 50px;
+  margin-top: 25px; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
