--- a/ethanhodges/styles/style.css
+++ b/ethanhodges/styles/style.css
@@ -23,6 +23,10 @@
     align-self: center;
 }
 
+.center {
+  text-align: center;
+}
+
 #content {
   max-width: 1600px;
   padding: auto;
@@ -95,3 +99,37 @@ footer {
   align-items: center;
 }
 
+#about_main {
+  padding-top: 5px;
+  display :grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, [col] 1fr);
+  grid-template-rows: repeat(2, [row] auto);
+}
+
+#bibliography {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+#about {
+  grid-column: 2/3;
+  grid-row: 1/3;
+}
+
+#awards {
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+
+#about_img_1 {
+  width: 100%;
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+#about_img_2 {
+  width: 100%;
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
